chore: change 1 to E in coveralls.yml

--- a/.github/workflows/coveralls.yml
+++ b/.github/workflows/coveralls.yml
@@ -34,7 +34,7 @@ jobs:
       # Run tests
       - name: Run tests
         run: |
-          echo "1" | ./test
+          echo "E" | ./test
           
       # Generate coverage report using lcov
       - name: Generate lcov report
