--- a/.github/workflows/coveralls.yml
+++ b/.github/workflows/coveralls.yml
@@ -37,7 +37,7 @@ jobs:
           # set term variable to xterm-256color
           export TERM=xterm-256color
           # run the test
-          printf "S\nE\n5\nW\nE" | ./test
+          printf "S\nE\nTESTING_ERROR_NOT_A_NUMBER\nW\nE" | ./multitool++
           
       # Generate coverage report using lcov
       - name: Generate lcov report
