chore: fix test.yml runs-on

--- a/.forgejo/workflows/test.yml
+++ b/.forgejo/workflows/test.yml
@@ -10,7 +10,9 @@ on:
 
 jobs:
   test:
-    runs-on: ubuntu-latest
+    runs-on: docker
+    container:
+      image: ubuntu:latest
 
     steps:
       - name: Checkout code
@@ -31,9 +33,4 @@ jobs:
       - name: Run tests
         run: |
           cd build
-          ctest --output-on-failure
-          
-      - name: Run the executable
-        run: |
-          cd build
-          echo "E" | ./multitool++
+          ctest --output-on-failure --verbose
