--- a/.github/workflows/artifacts.yml
+++ b/.github/workflows/artifacts.yml
@@ -13,7 +13,7 @@ on:
     types: [published]
 jobs:
   build:
-    runs-on: codeberg-tiny # Codeberg only has this runner, which runs Ubuntu.
+    runs-on: ubuntu-latest
 
     steps:
     - name: Checkout code
