made unselected menu options '[ ]', made clear() more efficient
* in src/console.hpp, the clear() function in the console namespace now uses ANSI escape codes rather than an unefficient shell command.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,3 +16,17 @@ add_executable(multitool++ ${SOURCES})
 
 # enable testing
 enable_testing()
+
+# Default to Release if nothing is set
+if(NOT CMAKE_BUILD_TYPE)
+  set(CMAKE_BUILD_TYPE Release CACHE STRING "Choose the build type." FORCE)
+endif()
+
+# Compiler-specific optimization flags
+if (MSVC)
+    # MSVC optimization flags
+    set(CMAKE_CXX_FLAGS_RELEASE "/O2 /DNDEBUG")
+else()
+    # GCC/Clang optimization flags
+    set(CMAKE_CXX_FLAGS_RELEASE "-O3 -DNDEBUG")
+endif()
